- Deleting User uses correct method - Update User password using hash - Check for existing emails before making changes
